# MRI_Viewer

./: .gitignore  README.md  backend.py  main.py  npy_to_dcm.ipynb  pyproject.toml  requirements.txt
src/: main_window.py
