[tool.poetry]
name = "final-demo"
version = "0.1.0"
description = ""
authors = ["patrashu <qhdrmfdl123naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
opencv-python = "^4.9.0.80"
pillow = "^10.2.0"
numpy = "^1.26.3"
pandas = "^2.2.0"
pyside6 = "^6.6.1"
tqdm = "^4.66.1"
pyqtdarktheme = "^2.1.0"
matplotlib = "^3.8.2"
scikit-learn = "^1.4.0"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
requests = "^2.31.0"
python-multipart = "^0.0.9"
asyncio = "^3.4.3"
aiohttp = "^3.9.3"
simpleitk = "^2.3.1"
pydicom = "^2.4.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
